# fossxo

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  about.toml  clippy.toml  deny.toml
assets/data/: input.ron
assets/ui/: main_menu.ron  menu.ron
config/: display.ron  input.ron
packaging/windows/: fossxo.iss
player-manual/: book.toml  player-manual.css
player-manual/src/: SUMMARY.md  chapter_1.md  controls.md  credits.md  gameplay-modes.md  intro.md  support.md  ttt-rules.md
player-manual/template/: library-licenses.md.hbs  software-bom.md.hbs
src/: components.rs  constants.rs  events.rs  file_io.rs  main.rs  math.rs  resources.rs
src/environments/: debug_environment.rs  environment.rs  mod.rs
src/states/: credits_menu.rs  game.rs  loading.rs  main_menu.rs  mod.rs  single_player_menu.rs
src/systems/: ai_player.rs  game_state_display.rs  local_player.rs  mod.rs  mouse_hover_debug_box.rs  mouse_raycast.rs
src/ui/: entity_observers.rs  game_controls.rs  menu.rs  mod.rs  style.rs
user-manual/: .gitignore  book.toml
