[package]
name = "fossxo"
version = "0.1.0"
edition = "2018"
authors = ["James Richey <james.richey+fossxo@imaginaryphase.com>"]
license = "MIT OR Apache-2.0"

description = "Free and open-source tic-tac-toe ."
keywords = ["game", "tic-tac-toe"]
categories = ["games"]

repository = "https://github.com/fossxo/fossxo.git"
homepage = "https://github.com/fossxo/fossxo"
documentation = "https://github.com/fossxo/fossxo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

